摄像头直播页面：sd卡，分享设备关联到的的显示

--- a/app/src/main/res/layout/fragment_camera_live.xml
+++ b/app/src/main/res/layout/fragment_camera_live.xml
@@ -26,7 +26,7 @@
 
     </FrameLayout>
 
-    <com.cylan.jiafeigou.n.view.cam.CamLiveControlLayer
+    <com.cylan.jiafeigou.n.view.cam.CamLiveLandControlLayer
         android:id="@+id/cam_live_control_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/y52"
