--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -107,4 +107,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="color_47C6A7">#47C6A7</color>
     <color name="color_6FA3FD">#6FA3FD</color>
+    <color name="color_767676">#767676</color>
 </resources>
