--- a/app/src/main/res/layout/cam_sight_setting_overlay.xml
+++ b/app/src/main/res/layout/cam_sight_setting_overlay.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="bottom"
-    android:background="#cc000000">
+    android:background="#cc000000"
+    android:clickable="true">
 
     <LinearLayout
         android:layout_width="match_parent"
