1.帮助与反馈第一次进入显示系统提示语 2.分享列表取消分享出现负数 3.取消分享添加前添加网络判断 4.通过亲友分享一直loading BUG 5.意见反馈清空由弹窗改为轻提示 6.发送反馈改为上传日志成功后自动回复 7.官网链接页添加头部 8.清空消息缓存单位最小改成MB 9.进入忘记密码不需任何提示

--- a/app/src/main/res/layout/fragment_forget_pwd.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd.xml
@@ -63,6 +63,7 @@
                         android:hint="@string/Tap0_enterphoneoremail"
                         android:maxLength="65"
                         android:singleLine="true"
+                        android:inputType="textVisiblePassword"
                         android:textColor="@color/color_666666"
                         android:textColorHint="@color/color_cecece"
                         android:textCursorDrawable="@drawable/bg_common_cursor"
