--- a/app/src/main/res/layout/fragment_mine_info_bind_phone.xml
+++ b/app/src/main/res/layout/fragment_mine_info_bind_phone.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/iv_mine_info_bind_phone"
                 android:padding="@dimen/x15"
                 android:layout_alignParentRight="true"
-                android:clickable="true"
+                android:clickable="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
