--- a/app/src/main/res/layout/fragment_mine_resetmail_tip.xml
+++ b/app/src/main/res/layout/fragment_mine_resetmail_tip.xml
@@ -14,7 +14,7 @@
         hunt:ct_background_color="@color/color_0ba8cf"
         hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
-        hunt:ct_left_title="邮箱验证"
+        hunt:ct_left_title="@string/Tap0_register_EmailVerification"
         hunt:ct_left_title_color="@color/color_white" />
 
     <FrameLayout
@@ -51,7 +51,7 @@
         android:layout_marginTop="@dimen/y18"
         android:textSize="@dimen/sp15"
         android:textColor="@color/color_7c7c7c"
-        android:text="请点击邮件链接重置密码"
+        android:text="@string/Tap0_Click_ActivateAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
