--- a/app/src/main/res/layout/fragment_mine_suggestion_server.xml
+++ b/app/src/main/res/layout/fragment_mine_suggestion_server.xml
@@ -1,40 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginTop="@dimen/y20"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
+        android:layout_marginTop="@dimen/y20"
         android:id="@+id/tv_mine_suggestion_server_time"
         android:textColor="@color/color_adadad"
         android:textSize="@dimen/sp13"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
         android:text="2016/04/01 12:00"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <ImageView
-        android:id="@+id/iv_mine_suggestion_server"
-        android:layout_marginTop="@dimen/y22"
-        android:layout_marginLeft="@dimen/x10"
-        android:src="@drawable/pic_head"
-        android:layout_width="@dimen/x41"
-        android:layout_height="@dimen/y40" />
+    <RelativeLayout
+        android:layout_marginTop="@dimen/y6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:background="@drawable/pic_container_white"
-        android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp14"
-        android:id="@+id/tv_mine_suggestion_server_speak"
-        android:paddingLeft="@dimen/x14"
-        android:paddingRight="@dimen/x10"
-        android:paddingBottom="@dimen/y10"
-        android:paddingTop="@dimen/y10"
-        android:text="亲爱的用户,客户端将进行系统维护升级,期间对设备正常使用将会造成一定影响，对您造成的不便之处敬请谅解。再次感谢您对加菲狗的支持！"
-        android:layout_marginLeft="@dimen/x3"
-        android:layout_marginTop="@dimen/y30"
-        android:layout_toRightOf="@id/iv_mine_suggestion_server"
-        android:layout_width="@dimen/x230"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/iv_mine_suggestion_server"
+            android:layout_marginLeft="@dimen/x10"
+            android:src="@drawable/pic_head"
+            android:layout_width="@dimen/x41"
+            android:layout_height="@dimen/y40" />
 
-</RelativeLayout>
+        <TextView
+            android:background="@drawable/pic_container_white"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp14"
+            android:id="@+id/tv_mine_suggestion_server_speak"
+            android:paddingLeft="@dimen/x14"
+            android:paddingRight="@dimen/x10"
+            android:paddingBottom="@dimen/y10"
+            android:paddingTop="@dimen/y10"
+            android:text="亲爱的用户,客户端将进行系统维护升级"
+            android:layout_marginLeft="@dimen/x3"
+            android:layout_marginTop="@dimen/y8"
+            android:layout_toRightOf="@id/iv_mine_suggestion_server"
+            android:layout_width="@dimen/x230"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
+</LinearLayout>
