1.忘记密码输入错误6位验证码无反应 2.验证码5分钟过期 3.验证码10分钟内只能3次 4.重置密码前在效验验证码 5.消息中心系统通知icon修改 6.绑定邮箱显示光标 7.亲友详情头像查看修改

--- a/app/src/main/res/layout/fragment_mine_info_mailbox.xml
+++ b/app/src/main/res/layout/fragment_mine_info_mailbox.xml
@@ -57,15 +57,15 @@
             <EditText
                 android:id="@+id/et_mine_personal_information_mailbox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/y48"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/x20"
                 android:layout_marginRight="@dimen/x20"
-                android:background="@null"
                 android:hint="@string/EMAIL_1"
-                android:textCursorDrawable="@drawable/search_friend_cursor_color"
+                android:background="@null"
                 android:maxLength="65"
                 android:singleLine="true"
+                android:inputType="textVisiblePassword"
                 android:ellipsize="start"
                 android:textColor="@color/color_333333"
                 android:textSize="@dimen/sp16" />
