--- a/app/src/main/res/layout/fragment_mine_look_big_image.xml
+++ b/app/src/main/res/layout/fragment_mine_look_big_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/color_white"
+    android:background="@color/color_black"
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,6 +10,6 @@
         android:layout_gravity="center"
         android:id="@+id/iv_look_big_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
-</FrameLayout>
+</RelativeLayout>
