--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_shadow="true"
         hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
         hunt:ct_left_title="@string/EQUIPMENT_INFO"
