--- a/app/src/main/res/layout/fragment_submit_binding_info.xml
+++ b/app/src/main/res/layout/fragment_submit_binding_info.xml
@@ -24,6 +24,7 @@
 
 
         <FrameLayout
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -58,7 +59,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/btn_bind_repeat"
+                android:layout_above="@+id/btn_bind_failed_repeat"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="@dimen/y39"
@@ -68,7 +69,7 @@
                 android:textSize="@dimen/sp16" />
 
             <com.cylan.jiafeigou.widget.LoginButton
-                android:id="@+id/btn_bind_repeat"
+                android:id="@+id/btn_bind_failed_repeat"
                 android:layout_width="@dimen/x173"
                 android:layout_height="@dimen/y50"
                 android:layout_centerInParent="true"
