1.修改备注名显示原备注名 2.搜已是亲友应调到分享设备页 3.扫扫已是亲友跳到分享设备页 4.头像连续上传不显示 5.搜索添加账号为空bug 6.手机注册设置密码页验证码超时提示 7.手机注册10分钟内只能3次获取验证码 8.设置密码页点击返回两次才能返回Bug 9.邮箱验证UI调整 10.邮箱验证增加网络提示

--- a/app/src/main/res/layout/fragment_forget_pwd_by_email.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd_by_email.xml
@@ -1,27 +1,44 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@android:color/white"
     android:clickable="true">
 
     <TextView
+        android:layout_marginTop="@dimen/y50"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/color_7c7c7c"
+        android:textSize="@dimen/sp15"
+        android:text="@string/Tap0_AlreadyEmailed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_marginTop="@dimen/y18"
         android:id="@+id/tv_send_email_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/y50"
+        android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:lineSpacingExtra="@dimen/x10"
         android:textColor="@color/color_7c7c7c"
         android:textSize="@dimen/sp15" />
 
     <TextView
+        android:layout_marginTop="@dimen/y18"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/color_7c7c7c"
+        android:textSize="@dimen/sp15"
+        android:text="@string/Tap0_Click_ActivateAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
         android:id="@+id/tv_email_confirm"
         style="@style/login_model_commit_style"
-        android:layout_below="@+id/tv_send_email_content"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/y37"
         android:text="@string/Button_Sure" />
 
-</RelativeLayout>
+</LinearLayout>
