--- a/app/src/main/res/layout/fragment_mine_resetmail_tip.xml
+++ b/app/src/main/res/layout/fragment_mine_resetmail_tip.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="@dimen/y55"
             android:textColor="@color/color_7c7c7c"
             android:textSize="@dimen/sp15"
-            android:text="系统已发送邮件到"
+            android:text="@string/Tap0_AlreadyEmailed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
