--- a/app/src/main/res/layout/fragment_home_mine_info.xml
+++ b/app/src/main/res/layout/fragment_home_mine_info.xml
@@ -18,10 +18,10 @@
             android:id="@+id/iv_home_mine_personal_back"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/y48"
-            android:drawablePadding="@dimen/x15"
             android:drawableLeft="@drawable/nav_tab_back_selector"
-            android:paddingLeft="@dimen/x15"
+            android:drawablePadding="@dimen/x15"
             android:gravity="center_vertical"
+            android:paddingLeft="@dimen/x15"
             android:text="@string/Tap3_Friends_UserInfo"
             android:textColor="@color/color_white"
             android:textSize="@dimen/sp18" />
@@ -37,9 +37,9 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -63,7 +63,6 @@
                         android:layout_marginLeft="@dimen/x20"
                         android:paddingTop="@dimen/y8"
                         android:singleLine="true"
-                        android:text="15856562525"
                         android:textColor="@color/color_333333"
                         android:textSize="@dimen/sp16" />
 
@@ -264,14 +263,14 @@
                     android:id="@+id/btn_home_mine_personal_information"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/y42"
-                    android:gravity="center"
                     android:layout_centerVertical="true"
-                    android:padding="@dimen/x10"
-                    android:text="@string/LOGOUT"
-                    android:layout_marginTop="@dimen/y10"
                     android:layout_marginEnd="@dimen/x30"
                     android:layout_marginStart="@dimen/x30"
+                    android:layout_marginTop="@dimen/y10"
                     android:background="@drawable/long_btn_bg_shape_white"
+                    android:gravity="center"
+                    android:padding="@dimen/x10"
+                    android:text="@string/LOGOUT"
                     android:textColor="@color/color_ff3b30"
                     android:textSize="@dimen/sp16" />
             </LinearLayout>
