--- a/app/src/main/res/layout/live_play_control_layout_content.xml
+++ b/app/src/main/res/layout/live_play_control_layout_content.xml
@@ -1,4 +1,4 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:id="@+id/progress_bar"
     android:layout_width="match_parent"
@@ -36,4 +36,14 @@
         android:layout_marginTop="@dimen/y10"
         android:textColor="@color/color_DDDDDD"
         android:textSize="@dimen/sp14" />
-</merge>
+
+    <TextView
+        android:id="@+id/tv_control_help"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/y10"
+        android:textColor="@color/color_4b9fd5"
+        android:textSize="@dimen/sp14"
+        android:visibility="gone" />
+</LinearLayout>
