配置wifi页面，保持屏幕常亮

--- a/app/src/main/res/layout/fragment_config_ap.xml
+++ b/app/src/main/res/layout/fragment_config_ap.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/color_white"
     android:clickable="true"
+    android:keepScreenOn="true"
     android:orientation="vertical"
     tools:context=".n.view.bind.ConfigApFragment">
 
